Scaffold project: notebooks, src, API, dashboard, docs, CI

--- a/notebooks/01_data_quality_and_statistics.ipynb
+++ b/notebooks/01_data_quality_and_statistics.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73a25ed8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: imports and dataset loading\n",
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from src.utils import set_seed\n",
+    "import os\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "# Load dataset from HuggingFace\n",
+    "print(\"Loading dataset FutureMa/EvasionBench...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "df = ds.to_pandas()\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "\n",
+    "# Save local copy if not exists\n",
+    "os.makedirs(\"data/raw\", exist_ok=True)\n",
+    "if not os.path.exists(\"data/raw/evasionbench.parquet\"):\n",
+    "    df.to_parquet(\"data/raw/evasionbench.parquet\", index=False)\n",
+    "    print(\"Saved data/raw/evasionbench.parquet\")\n",
+    "\n",
+    "# Quick preview\n",
+    "print(df.columns.tolist())\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e4bb9859",
    "metadata": {},
