--- a/notebooks/03_qa_interaction_analysis.ipynb
+++ b/notebooks/03_qa_interaction_analysis.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7112db0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: topic modeling & embeddings\n",
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "# Load dataset\n",
+    "print(\"Loading dataset FutureMa/EvasionBench...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "df = ds.to_pandas()\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "\n",
+    "# Load lightweight sentence transformer for similarity\n",
+    "embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "print(\"Embedder loaded: all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# Example embedding\n",
+    "example = df.loc[0, \"question\"] + \" \" + df.loc[0, \"answer\"]\n",
+    "print(\"Sample text:\\n\", example[:200])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "861e3cb3",
    "metadata": {},
