--- a/notebooks/05_embedding_baselines.ipynb
+++ b/notebooks/05_embedding_baselines.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "022973e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: embeddings & simple NN imports\n",
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "# Load dataset\n",
+    "print(\"Loading dataset FutureMa/EvasionBench...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "df = ds.to_pandas()\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "\n",
+    "# Load embedding model\n",
+    "embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "print(\"Embedder loaded\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1573f4d7",
    "metadata": {},
