--- a/notebooks/08_multitask_learning.ipynb
+++ b/notebooks/08_multitask_learning.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dbe903b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: multi-task learning skeleton\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "encoder_name = \"roberta-base\"\n",
+    "print(\"Loading encoder:\", encoder_name)\n",
+    "encoder = AutoModel.from_pretrained(encoder_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(encoder_name)\n",
+    "\n",
+    "class MultiTaskHead(nn.Module):\n",
+    "    def __init__(self, hidden_size, num_labels_primary=3):\n",
+    "        super().__init__()\n",
+    "        self.shared_pool = nn.Linear(hidden_size, hidden_size)\n",
+    "        self.primary = nn.Linear(hidden_size, num_labels_primary)  # evasion\n",
+    "        self.aux_sentiment = nn.Linear(hidden_size, 3)  # sentiment\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h = torch.relu(self.shared_pool(x))\n",
+    "        return {\n",
+    "            \"evasion_logits\": self.primary(h),\n",
+    "            \"sentiment_logits\": self.aux_sentiment(h),\n",
+    "        }\n",
+    "\n",
+    "print(\"MTL skeleton ready. Implement dataloaders and training loop.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0ae1878f",
    "metadata": {},
