--- a/notebooks/09_explainability_analysis.ipynb
+++ b/notebooks/09_explainability_analysis.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2402533f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: explainability skeleton (SHAP / LIME)\n",
+    "import shap\n",
+    "import numpy as np\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "model_name = \"distilbert-base-uncased\"\n",
+    "print(\"Loading model and tokenizer for explainability (this may be slow)...\")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
+    "\n",
+    "# Define a prediction function for SHAP\n",
+    "\n",
+    "def predict_fn(texts):\n",
+    "    enc = tokenizer(texts, truncation=True, padding=True, return_tensors=\"pt\")\n",
+    "    with torch.no_grad():\n",
+    "        out = model(**{k: v.to(model.device) for k, v in enc.items()})\n",
+    "    probs = torch.nn.functional.softmax(out.logits, dim=-1).cpu().numpy()\n",
+    "    return probs\n",
+    "\n",
+    "print(\"Explainability skeleton ready. Use SHAP/LIME on small subsets for debugging.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8981dbb3",
    "metadata": {},
