--- a/notebooks/10_label_quality_study.ipynb
+++ b/notebooks/10_label_quality_study.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aafca20a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: label quality study skeleton\n",
+    "import pandas as pd\n",
+    "from datasets import load_dataset\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "print(\"Loading dataset...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "\n",
+    "df = ds.to_pandas()\n",
+    "print(\"Dataset size:\", len(df))\n",
+    "\n",
+    "# Create stratified sample for manual annotation (100 per class)\n",
+    "sample = df.groupby(\"eva4b_label\").sample(n=100, random_state=42)\n",
+    "sample_path = \"data/annotations/manual_annotation_sample.csv\"\n",
+    "sample.to_csv(sample_path, index=False)\n",
+    "print(f\"Saved manual annotation sample to {sample_path}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5b404ed3",
    "metadata": {},
