--- a/notebooks/02_linguistic_patterns.ipynb
+++ b/notebooks/02_linguistic_patterns.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2dfcc3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: imports and NLP tools\n",
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import spacy\n",
+    "import nltk\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "# Load dataset\n",
+    "print(\"Loading dataset FutureMa/EvasionBench...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "df = ds.to_pandas()\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "\n",
+    "# Load spaCy model (install if missing)\n",
+    "try:\n",
+    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "except Exception:\n",
+    "    print(\"spaCy model en_core_web_sm not found. Run: python -m spacy download en_core_web_sm\")\n",
+    "    nlp = None\n",
+    "\n",
+    "# Quick sample\n",
+    "print(df[\"eva4b_label\"].value_counts())\n",
+    "df.sample(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dba675ca",
    "metadata": {},
