--- a/notebooks/04_traditional_ml_baselines.ipynb
+++ b/notebooks/04_traditional_ml_baselines.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e566d83e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: traditional ML imports and data loader\n",
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from src.utils import set_seed\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "# Load dataset\n",
+    "print(\"Loading dataset FutureMa/EvasionBench...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "df = ds.to_pandas()\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "\n",
+    "# Sample train/val/test split\n",
+    "train, test = train_test_split(df, test_size=0.2, stratify=df['eva4b_label'], random_state=42)\n",
+    "train, val = train_test_split(train, test_size=0.125, stratify=train['eva4b_label'], random_state=42)\n",
+    "print(\"Splits: \", train.shape, val.shape, test.shape)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b3cb1619",
    "metadata": {},
