--- a/notebooks/06_transformer_finetuning.ipynb
+++ b/notebooks/06_transformer_finetuning.ipynb
@@ -1,6 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cceef865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup: transformer fine-tuning skeleton\n",
+    "from datasets import load_dataset\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer\n",
+    "from src.utils import set_seed\n",
+    "import numpy as np\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "print(\"Loading dataset FutureMa/EvasionBench...\")\n",
+    "ds = load_dataset(\"FutureMa/EvasionBench\")\n",
+    "if isinstance(ds, dict):\n",
+    "    ds = ds[list(ds.keys())[0]]\n",
+    "\n",
+    "print(\"Dataset rows:\", len(ds))\n",
+    "\n",
+    "model_name = \"distilbert-base-uncased\"\n",
+    "print(f\"Using model: {model_name}\")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
+    "\n",
+    "# Preprocessing helper\n",
+    "\n",
+    "def preprocess(batch):\n",
+    "    return tokenizer(batch[\"answer\"], truncation=True, padding=\"max_length\", max_length=256)\n",
+    "\n",
+    "# Tokenize (fast, will run on the dataset) -- comment out if heavy\n",
+    "# ds = ds.map(preprocess, batched=True)\n",
+    "\n",
+    "# Example Trainer setup (do not run heavy training in the notebook automatically)\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"./models/distilbert-finetuned\",\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    per_device_train_batch_size=8,\n",
+    "    per_device_eval_batch_size=8,\n",
+    "    num_train_epochs=1,\n",
+    "    save_strategy=\"epoch\",\n",
+    ")\n",
+    "\n",
+    "# trainer = Trainer(model=model, args=training_args, train_dataset=None, eval_dataset=None)\n",
+    "print(\"Transformer skeleton ready. Fill in tokenization and Trainer datasets before training.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a8e4fc24",
    "metadata": {},
